Fix error on guix

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -46,7 +46,8 @@ floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
-tiling_drag modifier titlebar
+# Works on version >= 4.21
+#tiling_drag modifier titlebar
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
