--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -19,6 +19,9 @@ font pango: Hack Nerd Font 10
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
+# Add a gap between windows (>= 4.22)
+gaps inner 5
+
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
