--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -13,14 +13,12 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: Hack Nerd Font 10
-
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango: Hack Nerd Font Bold 11
 
 # Add a gap between windows (>= 4.22)
-gaps inner 3
+gaps inner 2
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -35,6 +33,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
+# Try nm-tray, nm-applet is gnome dependent.
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
@@ -54,14 +53,14 @@ floating_modifier $mod
 
 # start a terminal
 #bindsym $mod+Return exec i3-sensible-terminal
-#bindsym $mod+Return exec alacritty
-bindsym $mod+Return exec rxvt-unicode
+bindsym $mod+Return exec alacritty
+#bindsym $mod+Return exec rxvt-unicode
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id "dmenu_run -nb '#002b36' -nf '#839496' -sb '#073642' -sf '#cb4b16' -fn 'Hack Nerd Font Mono' -p Menu -i"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -160,7 +159,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to exit i3?' -B 'Yes, exit i3' 'i3-msg exit'"
 
 exec "setxkbmap -layout us"
 #exec "setxkbmap -option 'grp:alt_shift_toggle'"
@@ -168,21 +167,10 @@ exec "setxkbmap -layout us"
 # resize window (you can also use the mouse for that)
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
         bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        #bindsym Left resize shrink width 10 px or 10 ppt
-        #bindsym Down resize grow height 10 px or 10 ppt
-        #bindsym Up resize shrink height 10 px or 10 ppt
-	#bindsym Right resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
@@ -195,8 +183,11 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        position top
+        # 3px left/right padding
+        #padding 0 3
         status_command i3status
+        # Disable clicking on workspace buttons
+        bindsym button1 nop
         colors {
             background #002b36
             statusline #839496
@@ -213,13 +204,14 @@ client.focused_inactive #002b36 #073642 #839496 #073642
 client.unfocused        #002b36 #073642 #839496 #073642
 client.urgent           #002b36 #dc322f #fdf6e3 #002b36
 
-# assigning windows to specific ws
+# Assigning windows to specific ws
 #assign [class="firefox"]          $ws2
 #assign [class="code"]             $ws3
 #assign [class="meld"]             $ws8
 #assign [class="Nyxt"]             $ws2
+for_window [class="Emacs"] move to workspace $ws6
 for_window [class="firefox"] move to workspace $ws2
-for_window [class="Vieb"] move to workspace $ws2
+for_window [class="Vimb"] move to workspace $ws2
 for_window [class="code"] move to workspace $ws3
 for_window [class="meld"] move to workspace $ws8
 for_window [class="Tor Browser"] move to workspace $ws7
