--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -111,7 +111,7 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
 # start a terminal in the domain of the currently active window
-bindsym $mod+Return exec qubes-i3-sensible-terminal
+#bindsym $mod+Return exec qubes-i3-sensible-terminal
 #bindsym $mod+Return exec alacritty
 #bindsym $mod+Return exec rxvt-unicode
 
