Do not show ipv6

--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -8,7 +8,7 @@ general {
         interval = 5
 }
 
-order += "ipv6"
+#order += "ipv6"
 order += "wireless wlp2s0"
 order += "ethernet enp0s3"
 order += "battery 0"
