--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -19,6 +19,7 @@ order += "tztime local"
 
 wireless wlp2s0 {
         format_up = "W: %ip (%bitrate,%quality at %essid)"
+	format_down = ""
 }
 
 ethernet enp0s3 {
