--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -32,7 +32,7 @@ battery 0 {
         format_down = "No battery"
         status_chr = "⚡ CHR"
         status_bat = "🔋 BAT"
-        status_unk = "? UNK"
+        status_unk = "󱉝 UNK"
         status_full = "☻ FULL"
         path = "/sys/class/power_supply/BAT%d/uevent"
         low_threshold = 10
