Fix all battery icons

--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -29,11 +29,11 @@ ethernet enp0s3 {
 
 battery 0 {
         format = "%status %percentage %remaining %emptytime"
-        format_down = "No battery"
-        status_chr = "⚡ CHR"
-        status_bat = "🔋 BAT"
-        status_unk = "󱉝 UNK"
-        status_full = "☻ FULL"
+        format_down = "󱉝"
+        status_chr = "󰂄"
+        status_bat = "󰂂"
+        status_unk = "󰂃"
+        status_full = "󰁹"
         path = "/sys/class/power_supply/BAT%d/uevent"
         low_threshold = 10
 }
