--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -18,13 +18,13 @@ order += "memory"
 order += "tztime local"
 
 wireless wlp2s0 {
-        format_up = "W: %ip (%bitrate,%quality at %essid)"
-	format_down = ""
+        format_up = "%ip (%bitrate,%quality at %essid)"
+        format_down = ""
 }
 
 ethernet enp0s3 {
-        format_up = "E: %ip (%speed)"
-	format_down = ""
+        format_up = "%ip (%speed)"
+        format_down = ""
 }
 
 # icons extracted from https://www.nerdfonts.com/cheat-sheet
