--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -18,7 +18,7 @@ font xft:HackNerdFontMono 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango: Hack Nerd Font Bold 9
+font pango: Hack Nerd Font Bold 10
 
 # Add a gap between windows (>= 4.22)
 gaps inner 2
@@ -282,13 +282,14 @@ client.urgent           #002b36 #dc322f #fdf6e3 #002b36
 #assign [class="code"]             $ws3
 #assign [class="meld"]             $ws8
 #assign [class="Nyxt"]             $ws2
-for_window [class="Emacs"] move to workspace $ws6
+#for_window [class="Emacs"] move to workspace $ws6
 for_window [class="firefox"] move to workspace $ws2
 for_window [class="Vimb"] move to workspace $ws2
 for_window [class="code"] move to workspace $ws3
 for_window [class="meld"] move to workspace $ws8
 for_window [class="Tor Browser"] move to workspace $ws7
 for_window [class="Nyxt"] move to workspace $ws2
+#for_window [class="Evince"] move to workspace $ws5
 
 for_window [class="^.*"] border pixel 0
 
