--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -14,11 +14,11 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:monospace 18
-font xft:HackNerdFontMono 11
+#font xft:HackNerdFontMono 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-font pango: Hack Nerd Font Bold 10
+font pango: Hack Nerd Font Bold 11
 
 # Add a gap between windows (>= 4.22)
 gaps inner 2
@@ -129,7 +129,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id "dmenu_run -nb '#002b36' -nf '#839496' -sb '#073642' -sf '#cb4b16' -fn 'Hack Nerd Font Mono' -p Menu -i"
+bindsym $mod+d exec --no-startup-id "dmenu_run -nb '#002b36' -nf '#839496' -sb '#073642' -sf '#cb4b16' -fn 'Hack Nerd Font Mono-11' -p Menu -i"
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
