--- a/nixos/project-templates/java-gradle-template/build.gradle
+++ b/nixos/project-templates/java-gradle-template/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.example'
@@ -11,4 +12,8 @@ repositories {
 
 java {
     sourceCompatibility = JavaVersion.VERSION_17
+}
+
+application {
+  mainClass = 'demo.Main'
 }
